Chooser tweaks: + Fix chooser button text overflow when favorite icon shown + Remove danger intent from favorites menu delete buttons + Restyle favorites menu with title

--- a/desktop/cmp/grouping/GroupingChooser.scss
+++ b/desktop/cmp/grouping/GroupingChooser.scss
@@ -6,19 +6,26 @@
  */
 
 .xh-grouping-chooser {
-  .xh-button.xh-grouping-chooser-button--as-input {
-    background-color: var(--xh-input-bg) !important;
-    border: none;
-    box-shadow: var(--xh-form-field-box-shadow);
-    display: inline;
-    overflow: hidden;
-    padding-left: var(--xh-pad-px) !important;
-    padding-right: var(--xh-pad-px) !important;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+  .xh-button.xh-grouping-chooser-button {
+    &--as-input {
+      background-color: var(--xh-input-bg) !important;
+      border: none;
+      box-shadow: var(--xh-form-field-box-shadow);
+      display: inline;
+      overflow: hidden;
+      padding-left: var(--xh-pad-px) !important;
+      padding-right: var(--xh-pad-px) !important;
+      text-overflow: ellipsis;
+      white-space: nowrap;
 
-    & > .xh-icon {
-      color: var(--xh-text-color-muted);
+      & > .xh-icon {
+        color: var(--xh-text-color-muted);
+      }
+    }
+
+    // We must account for the favorites icon when eliding text
+    &--with-favorites {
+      padding-right: 25px !important;
     }
   }
 
